<resources>
    <string name="app_name">Travel</string>
    <string name="app_key">gF6cLrRiZzK9aNiQfUSqaJ1Z2u0xtuaF</string>
    <string name="wall_id">5687bf84cbf23d0000000220</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_search_hint">查找你喜欢的人和事</string>
    <string name="action_search_failure">查找失败，是不是用户名不存在~</string>
    <string name="action_search_success">查找成功</string>
    <string name="action_user">用户登入</string>

    <!--transitions-->
    <string name="transitions_avatar">avatar</string>
    <string name="transitions_photo">photo</string>
    <string name="transitions_nickname">nickname</string>
    <string name="transitions_time">time</string>
    <string name="transitions_comment">comment</string>

    <!--register && login-->
    <string name="exit">退出</string>
    <string name="exit_success">退出成功</string>
    <string name="exit_title">确定要退出吗？</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功 :)</string>
    <string name="register_error">服务器打了一个瞌睡~好像没有成功了呢 :(</string>
    <string name="login">登陆</string>
    <string name="login_success">登入成功</string>
    <string name="login_error">用户名或者密码错误</string>
    <string name="password">密码</string>
    <string name="user_name">账号</string>
    <string name="nick_name">昵称</string>
    <string name="nick_null">昵称不能为空</string>
    <string name="update_nickname">请输入新的昵称</string>
    <string name="update_nick_success">昵称更新成功</string>
    <string name="drawer_default_text">点击头像登入</string>
    <string name="avatar_update_success">头像更新成功</string>
    <string name="avatar_update_error">头像更新成功</string>
    <string name="avatar_load_error">头像加载失败</string>

    <!--snackBar-->
    <string name="no_received">系统还没有可以分享的应用哦</string>
    
    <!--others-->
    <string name="friend_request_rejected">拒绝</string>
    <string name="photo_detail">输入此刻的想法...</string>
    <string name="location_text">所在位置</string>
    <string name="btn_send">发送</string>
    <string name="add_like">点赞成功</string>
    <string name="cancel_like">取赞成功</string>
    <string name="post_title">我的动态</string>
    <string name="follow_title">关注的人</string>
    <string name="commit_title">评论</string>

    <!--nav-->
    <string name="nav_home">首页</string>
    <string name="nav_follow">我的关注</string>
    <string name="action_share">分享</string>

    <!--Setting Preference-->
    <string name="setting">设置</string>
    <string name="others">其他</string>
    <string name="about">关于</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="preference_category_title">个人</string>
    <string name="preference_category_function">功能</string>
    <string name="preference_source_title">开放源代码许可</string>
    <string name="preference_wifi_title">省流量模式</string>
    <string name="preference_wifi_summary">仅在Wifi下加载</string>
    <string name="preference_notify_title">不在接收通知</string>
    <string name="preference_notify_summary">会错过有意思的内容哦</string>
    <string name="preference_cache_title">清除缓存</string>

    <string name="title">Title</string>
    <string name="sub_title">SubTitle</string>

    <string name="guide_title_1">随时随地</string>
    <string name="guide_sub_title_1">分享每一次旅游</string>
    <string name="guide_title_2">智能推荐</string>
    <string name="guide_sub_title_2">发现身边的美</string>
    <!--<string name="guide_title_3"></string>-->
    <!--<string name="guide_sub_title_3"></string>-->

    <!--btn-->
    <string name="btn_follow">关注</string>
    <string name="fab_follow_success">关注成功</string>
    <string name="fab_follow_error">关注失败</string>

</resources>
