<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_username"
        android:paddingTop="@dimen/margin_30"
        android:paddingStart="@dimen/margin_30"
        android:paddingEnd="@dimen/margin_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/user_name_et"
            android:textColorHint="@color/grey500"
            android:hint="@string/user_name"
            android:textColor="@color/white"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_below="@+id/input_username"
        android:paddingTop="@dimen/margin_30"
        android:paddingStart="@dimen/margin_30"
        android:paddingEnd="@dimen/margin_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_pass_et"
            android:textColorHint="@color/grey500"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_below="@+id/input_pass"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginStart="@dimen/margin_30"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>